--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,5 @@
 theme: jekyll-theme-hacker
+title: Nihilist News Network
+description: News for Nihilists
+show_downloads: false
+# google_analytics: [Your Google Analytics tracking ID]
