--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,20 @@
-theme: jekyll-theme-hacker
+# theme: jekyll-theme-hacker
+remote_theme: pages-themes/hacker@v0.2.0
+plugins:
+  - jekyll-remote-theme # add this line to the plugins list if you already have one
+
 title: Nihilist News Network
 description: News for Nihilists
 show_downloads: false
-# google_analytics: [Your Google Analytics tracking ID]
+url: https://nihilist.news
+author:
+  name: The Nihilist
+  email: nihilist@nihilist.news
+  url: https://nihilist.news
+
+
+# # paginate: 4
+owner: The Nihilist
+year: 2022
+
+google_analytics: G-N25BZ8NCVE
