--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@ title: Nihilist News Network
 description: News for Nihilists
 show_downloads: false
 url: https://nihilist.news
+twitter: NihilstNews
 google_analytics: G-N25BZ8NCVE
 author:
   name: The Nihilist
