--- a/_config.yml
+++ b/_config.yml
@@ -3,18 +3,18 @@ remote_theme: pages-themes/hacker@v0.2.0
 plugins:
   - jekyll-remote-theme # add this line to the plugins list if you already have one
 
-title: Nihilist News Network
-description: News for Nihilists
+title: The Post Nihlist
+description: News for those that have graduated from the news cycle
 show_downloads: false
 url: https://nihilist.news
-twitter: NihilstNews
+twitter: Th3PostNihlist
 google_analytics: G-N25BZ8NCVE
 author:
-  name: The Nihilist
+  name: Matt Matt
   email: nihilist@nihilist.news
   url: https://nihilist.news
 
 
 # # paginate: 4
-owner: The Nihilist
-year: 2022
+owner: Matt Matt
+year: 2023
