--- a/ThePostNihilist/_config.yml
+++ b/ThePostNihilist/_config.yml
@@ -3,18 +3,18 @@ remote_theme: pages-themes/hacker@v0.2.0
 plugins:
   - jekyll-remote-theme # add this line to the plugins list if you already have one
 
-title: Nihilist News Network
-description: There is no truth and everything is propaganda.
+title: The Post Nihlist
+description: News for those that have graduated from the news cycle
 show_downloads: false
 url: https://nihilist.news
 twitter: Th3PostNihlist
 google_analytics: G-N25BZ8NCVE
 author:
-  name: Young Stalin
+  name: Matt Matt
   email: nihilist@nihilist.news
   url: https://nihilist.news
 
 
 # # paginate: 4
-owner: Young Stalin
+owner: Matt Matt
 year: 2023
